--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styleSimon.css">
 </head>
 <body>
-    <h1 class="game-title">Juego de Simon Dice</h1>
+    <h1 class="game-title">Simón Dice</h1>
     <button id="start">Comenzar</button>
     <div id="scoreboard">
       <p id="score">Puntaje: 0</p>
